Change env file and added a Dockerfile and deployment file

--- a/giftlink-backend/.env
+++ b/giftlink-backend/.env
@@ -1,2 +1,2 @@
-MONGO_URL=mongodb://root:gZjPaNNp3ICP5I6SiFmE9Gjj@172.21.215.118:27017
-JWT_SECRET=setasecret
+MONGO_URL=mongodb://mongodb-service:27017
+JWT_SECRET=mysecret
